[gd_scene load_steps=7 format=2]

[ext_resource path="res://imagens/vida.png" type="Texture" id=1]
[ext_resource path="res://script-vida.gd" type="Script" id=2]
[ext_resource path="res://musicas/Ok!.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.2, 21.8001 )

[sub_resource type="Animation" id=2]
resource_name = "caindo"
length = 0.22
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("../Area2D/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Rect2( 61, 19, 87, 264 ), Rect2( 165, 19, 103, 264 ), Rect2( 286, 32, 124, 251 ), Rect2( 428, 56, 128, 227 ), Rect2( 574, 77, 132, 206 ), Rect2( 736, 102, 129, 181 ), Rect2( 899, 143, 111, 140 ), Rect2( 1028, 164, 132, 119 ), Rect2( 1182, 160, 112, 123 ), Rect2( 1345, 164, 91, 119 ), Rect2( 1470, 168, 86, 115 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "parado"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Area2D/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Rect2( 1574, 143, 87, 140 ), Rect2( 1678, 139, 87, 144 ), Rect2( 1782, 135, 87, 148 ), Rect2( 1887, 131, 86, 152 ), Rect2( 1991, 131, 86, 152 ), Rect2( 2095, 127, 87, 156 ), Rect2( 2199, 131, 87, 152 ), Rect2( 2303, 127, 87, 156 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -5.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( -0.25, -7.19767 )
scale = Vector2( 0.319767, 0.319767 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 61, 19, 87, 264 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/caindo = SubResource( 2 )
anims/parado = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="equipar_vida"]
[connection signal="animation_finished" from="Area2D/AnimationPlayer" to="." method="trocar_de_animacao"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="sumir_com_a_vida"]
